# yt-transcript-extractor

./: pyproject.toml
.claude/skills/transcribeyt/: SKILL.md
src/yt_transcript_extractor/: __init__.py  api.py  cli.py  errors.py  extractor.py  metadata.py  storage.py
tests/: test_api.py  test_cli.py  test_extractor.py  test_metadata.py  test_storage.py
